objects/nCHECK__Grading_Log__c.object
<CustomObject>
    <fields>
        <fullName>nCHECK__Course__c</fullName>
        <label>Course</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Dependant_Test__c</fullName>
        <description>Not used for grading logs, only for testing</description>
        <label>Dependant Test</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>nCHECK__Test_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCHECK__Exercise__c</fullName>
        <label>Exercise</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCHECK__Test_Picklist__c</fullName>
        <description>Not used for grading logs, only for test purposes</description>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCHECK__Wave__c</fullName>
        <label>Wave</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Grading Log</label>
    <listViews>
        <fullName>nCHECK__All</fullName>
        <columns>NAME</columns>
        <columns>nCHECK__Wave__c</columns>
        <columns>nCHECK__Course__c</columns>
        <columns>nCHECK__Exercise__c</columns>
        <columns>nCHECK__Passed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Grading Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grading Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>